--- a/XRViewer/Resources/Settings.bundle/Root.plist
+++ b/XRViewer/Resources/Settings.bundle/Root.plist
@@ -14,7 +14,7 @@
 			<key>Key</key>
 			<string>homeURL</string>
 			<key>DefaultValue</key>
-			<string>https://webxr-ios.webxrexperiments.com/splash.html</string>
+			<string>https://try.cdcc.cmbchina.com/ARWeb/examples/image_detection/index1.html</string>
 			<key>IsSecure</key>
 			<false/>
 			<key>KeyboardType</key>
